Reduce z-index on thick connectors to prevent them from overlapping fill of triangles

--- a/styles/components/node.css
+++ b/styles/components/node.css
@@ -110,6 +110,7 @@
 
 .subtree__connector--thick {
   stroke-width: 6px;
+  z-index: -1;
 }
 
 .subtree__vars-connector {
